configs/k8s/policy/disallow-privileged.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: disallow-privileged
  annotations:
    policies.kyverno.io/title: Disallow privileged containers
    policies.kyverno.io/category: Best Practices
    policies.kyverno.io/severity: critical
    policies.kyverno.io/subject: Pod, Container
    policies.kyverno.io/description: >-
      Privileged containers have full access to the host's resources.
      This policy disallows privileged containers in the cluster.
spec:
  validationFailureAction: Enforce
  background: true
  rules:
    - name: deny-privileged
      match:
        any:
          - resources:
              kinds:
                - Pod
      validate:
        message: "Privileged containers are not allowed."
        pattern:
          spec:
            containers:
              - securityContext:
                  privileged: "false"
            initContainers:
              - securityContext:
                  privileged: "false"
